change the width of logo

--- a/index.html
+++ b/index.html
@@ -4,12 +4,21 @@
 <head>
     <meta charset="UTF-8">
     <title> tatlegion</title>
+    <style>
+        #logo{
+            width: 150px;
+        }
+        #portrait{
+            width: 300px;
+            border-radius: 100px;
+        }
+    </style>
 </head>
 
 <body>
-    <img src="./rmit-logo.png" alt="image host" style="height:100px">
+    <img src="./rmit-logo.png" alt="image host" id="logo">
     <figure>
-        <img src="./user-profile.png" alt="user-profile" style=width:150px>
+        <img src="./user-profile.png" alt="user-profile" id="portrait">
     </figure>
     <h1><strong>Tuan Tram</h1></strong>
     <p>Hi👍, I am Tuan. I am a first year IT student at RMIT. I am looking foward to share my interest with everyone and make new friends.
